@@ -3,6 +3,7 @@ package com.cmp.ai.service;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import org.springframework.lang.NonNull;
 import org.springframework.stereotype.Service;
 
 import com.cmp.ai.dto.request.CountryRequest;
@@ -21,20 +22,20 @@ public class CountryService {
     private final CountryRepository countryRepository;
 
     public CountryResponse createCountry(CountryRequest request) {
-        Country country = CountryTransformer.CountryRequestToCountry(request);
-        return CountryTransformer.CountryToCountryResponse(countryRepository.save(country));
+        Country country = CountryTransformer.countryRequestToCountry(request);
+        return CountryTransformer.countryToCountryResponse(countryRepository.save(country));
     }
 
     public CountryResponse getCountryByCode(String code) {
         Country country = countryRepository.findById(code)
                 .orElseThrow(() -> new ResourceNotFoundException("Country not found"));
-        return CountryTransformer.CountryToCountryResponse(country);
+        return CountryTransformer.countryToCountryResponse(country);
     }
 
     public List<CountryResponse> getAllCountries() {
         return countryRepository.findAll().stream()
-                .map(CountryTransformer::CountryToCountryResponse)
-                .collect(Collectors.toList());
+                .map(CountryTransformer::countryToCountryResponse)
+                .toList();
     }
 
     public CountryResponse updateCountry(String code, CountryRequest request) {
@@ -42,7 +43,7 @@ public class CountryService {
                 .orElseThrow(() -> new ResourceNotFoundException("Country not found"));
 
         country.setName(request.getName());
-        return CountryTransformer.CountryToCountryResponse(countryRepository.save(country));
+        return CountryTransformer.countryToCountryResponse(countryRepository.save(country));
     }
 
     public void deleteCountry(String code) {
