@@ -3,6 +3,7 @@ package com.cmp.ai.service;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import org.springframework.lang.NonNull;
 import org.springframework.stereotype.Service;
 
 import com.cmp.ai.dto.request.PaymentTermsRequest;
@@ -27,38 +28,38 @@ public class PaymentTermsService {
         Customer customer = customerRepository.findById(request.getCustomerId())
                 .orElseThrow(() -> new ResourceNotFoundException("Customer not found"));
 
-        PaymentTerms paymentTerms = PaymentTermsTransformer.PaymentTermsRequestToEntity(request, customer);
-        return PaymentTermsTransformer.PaymentTermsToResponse(paymentTermsRepository.save(paymentTerms));
+        PaymentTerms paymentTerms = PaymentTermsTransformer.paymentTermsRequestToEntity(request, customer);
+        return PaymentTermsTransformer.paymentTermsToResponse(paymentTermsRepository.save(paymentTerms));
     }
 
-    public PaymentTermsResponse getPaymentTermsById(Long id) {
+    public PaymentTermsResponse getPaymentTermsById(@NonNull Long id) {
         PaymentTerms paymentTerms = paymentTermsRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Payment Terms not found"));
-        return PaymentTermsTransformer.PaymentTermsToResponse(paymentTerms);
+        return PaymentTermsTransformer.paymentTermsToResponse(paymentTerms);
     }
 
-    public List<PaymentTermsResponse> getPaymentTermsByCustomerId(Long customerId) {
+    public List<PaymentTermsResponse> getPaymentTermsByCustomerId(@NonNull Long customerId) {
         return paymentTermsRepository.findByCustomerId(customerId).stream()
-                .map(PaymentTermsTransformer::PaymentTermsToResponse)
-                .collect(Collectors.toList());
+                .map(PaymentTermsTransformer::paymentTermsToResponse)
+                .toList();
     }
 
     public List<PaymentTermsResponse> getAllPaymentTerms() {
         return paymentTermsRepository.findAll().stream()
-                .map(PaymentTermsTransformer::PaymentTermsToResponse)
-                .collect(Collectors.toList());
+                .map(PaymentTermsTransformer::paymentTermsToResponse)
+                .toList();
     }
 
-    public PaymentTermsResponse updatePaymentTerms(Long id, PaymentTermsRequest request) {
+    public PaymentTermsResponse updatePaymentTerms(@NonNull Long id, PaymentTermsRequest request) {
         PaymentTerms paymentTerms = paymentTermsRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Payment Terms not found"));
 
         paymentTerms.setTerms(request.getTerms());
         paymentTerms.setRemark(request.getRemark());
-        return PaymentTermsTransformer.PaymentTermsToResponse(paymentTermsRepository.save(paymentTerms));
+        return PaymentTermsTransformer.paymentTermsToResponse(paymentTermsRepository.save(paymentTerms));
     }
 
-    public void deletePaymentTerms(Long id) {
+    public void deletePaymentTerms(@NonNull Long id) {
         if (!paymentTermsRepository.existsById(id)) {
             throw new ResourceNotFoundException("Payment Terms not found");
         }
